--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 
 /* 1rem = 16px */
 body {
-  color: rgb(255, 255, 255);
+  color: white;
   font-size: 1.4rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -42,7 +42,19 @@ body {
 .panel4 { background-image: url('images/thinking.avif'); }
 .panel5 { background-image: url('images/dream.avif'); }
 
-@media (min-width: 640px) {
+@media (min-width: 768px) {
+  .panel {
+    flex: 320px;
+  }
+}
+
+@media (min-width: 960px) {
+  .panel {
+    flex: 350px;
+  }
+}
+
+@media (min-width: 1000px) {
   .panel {
     flex: 1;
   }
