--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,11 @@
 /* 1rem = 16px */
 body {
   color: white;
-  font-size: 1.4rem;
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.4rem; /* 20px */
   font-weight: bold;
   text-transform: uppercase;
-  font-family: 'Oswald', sans-serif;
+  text-align: center;
 }
 
 .panels {
@@ -26,25 +27,42 @@ body {
 
 .panel {
   flex: 100%;
-  height: 100vh;
-  text-align: center;
+  justify-content: center;
   align-items: center;
+  background-size: cover;
+  transition: 
+    font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    background-image 0.2s;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  background-size: cover;
-  background-position: center;
+  overflow: hidden;
 }
 
-.panel1 { background-image: url('images/doubt.jpg'); }
-.panel2 { background-image: url('images/pride.jpg'); }
-.panel3 { background-image: url('images/fear.jpg'); }
+/* Flex items */
+.panel > * {
+  transition: transform 0.2s;
+}
+
+.panel > *:first-child { transform: translateY(-1300%); }
+.panel.open-active > *:first-child { transform: translateY(0); }
+.panel > *:last-child { transform: translateY(1300%); }
+.panel.open-active > *:last-child { transform: translateY(0); }
+
+.panel1 { background-image: url('images/doubt.jpg'); background-position: 50% 35%; }
+.panel2 { background-image: url('images/pride.jpg'); background-position: 50% 50%; }
+.panel3 { background-image: url('images/fear.jpg'); background-position: 50% 54%; }
 .panel4 { background-image: url('images/thinking.jpg'); }
-.panel5 { background-image: url('images/dream.jpg'); }
+.panel5 { background-image: url('images/dream.jpg'); background-position: 50% 50%; }
+
+.panel.open {
+  font-size: 40px;
+}
 
 @media (min-width: 768px) {
   .panel {
-    flex: 320px;
+    background-position: center; 
   }
 }
 
@@ -57,5 +75,10 @@ body {
 @media (min-width: 1100px) {
   .panel {
     flex: 1;
+  }
+
+  .panel.open {
+    flex: 5;
+    font-size: 40px;
   }
 }
