--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 
 /* 1rem = 16px */
 body {
-  color: white;
+  color: rgb(255, 255, 255);
   font-family: 'Oswald', sans-serif;
   font-size: 1.4rem; /* 20px */
   font-weight: bold;
@@ -61,21 +61,14 @@ body {
   font-size: 40px;
 }
 
-@media (min-width: 768px) {
-  .panel {
-    background-position: center; 
-  }
-}
-
-@media (min-width: 960px) {
-  .panel {
-    flex: 480px;
-  }
+.special {
+  background-color: rgba(0, 0, 0, 0.47);
 }
 
 @media (min-width: 1100px) {
   .panel {
     flex: 1;
+    background-position: center;
   }
 
   .panel.open {
